add buttons, add previous & next functionality

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     -->
     <title>We Are Tam Tam</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
     <noscript>
